[package]
name = "gumbo-lib"
version = "0.1.4"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/lex148/gumbo_lib"
description = "Best of the best rust projects all mixed together into a website framework"
categories = ["web-programming", "development-tools"]
keywords = ["web", "cli", "server", "generator", "tool"]

[dependencies]
actix-web = "^4.9"
log = "0.4"
sha3 = "0.10"
base16ct = {version="0.2", features=["alloc"]}
minifier = "0.2"
thiserror = "^1.0"
anyhow = "^1.0"
yew = { version = "^0.21", features = ["ssr"] }
tokio = { version = "^1.40", features = ["sync"], optional=true }

# for session
aes-gcm = { version="^0.10", optional=true }
rand    = { version="^0.8", optional=true }
base64  = { version="^0.22", optional=true }
serde   = { version="^1.0", optional=true }
bincode = { version="^1.3", optional=true }
futures = { version="^0.3", optional=true }

[features]
default=[]
sessions=["aes-gcm","rand", "base64", "serde", "bincode", "futures"]
turbo-streams=["tokio"]


[dev-dependencies]
# enable the features for dev/test
gumbo-lib = { path="./", features=["sessions", "turbo-streams"] }
