[package]
name = "gumbo-lib"
version = "0.1.7"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/lex148/gumbo_lib"
description = "Best of the best rust projects all mixed together into a website framework"
categories = ["web-programming", "development-tools"]
keywords = ["web", "cli", "server", "generator", "tool"]

[dependencies]
actix-web = "^4"
log = "0.4"
sha3 = "0.10"
base16ct = {version="1.0", features=["alloc"]}
minifier = "0.3"
thiserror = "^2.0"
anyhow = "^1.0"
yew = { version = "^0.22", features = ["ssr"] }
tokio = { version = "^1", features = ["sync"], optional=true }
regex = "1.12"

# for session
aes-gcm = { version="^0.10", optional=true }
rand    = { version="^0.9", optional=true }
base64  = { version="^0.22", optional=true }
rkyv = { version="0.8", optional=true }
futures = { version="^0.3", optional=true }

[features]
default=[]
middleware=[]
sessions=["aes-gcm","rand", "base64", "rkyv", "futures"]
turbo-streams=["tokio"]


[dev-dependencies]
# enable the features for dev/test
gumbo-lib = { path="./", features=["sessions", "turbo-streams", "middleware"] }
